# InterFaceAvaliacoes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ui/telas/: dialogoavaliacaoficha.cpp  dialogoavaliacaoficha.h  dialogologin.cpp  dialogologin.h  dialogologin.ui  dialogoselecionarficha.cpp  dialogoselecionarficha.h  dialogovincularavaliadores.cpp  dialogovincularavaliadores.h  janelaprincipal.cpp  janelaprincipal.h  janelaprincipal.ui  paginaavaliadores.cpp  paginaavaliadores.h  paginaavaliadores.ui  paginafichas.cpp  paginafichas.h  paginanotas.cpp  paginanotas.h  paginanotas.ui  paginaprojetos.cpp  paginaprojetos.h  paginaprojetos.ui  vinculos.cpp  vinculos.h
